# stepper_driver

./: .gitmodules  README.md  update.sh
doc/: design.md
software/: .gitignore  CMakeLists.txt
software/.run/: bin.run.xml  flash.run.xml  srec.run.xml  stepper_driver.run.xml
software/cmake/: arm-none-eabi.cmake  flash.cmake
software/inc/: ADC.h  EXTI.h  GPIO.h  I2C.h  NVIC.h  RTC.h  SPI.h  USART.h  base.h  macro.s  memory_map.h  periph.h  sys.h  tim.h
software/lib/AS5600/: AS5600.c  AS5600.h
software/lnk/: STM32F412.ld  flash.ld  sram.ld
software/src/: ADC.c  EXTI.S  GPIO.S  I2C.c  NVIC.S  RTC.c  SPI.c  USART.S  USART.c  base.S  base.c  main.c  startup.S  sys.S  sys.c  syscalls.S  tim.c  vector.S
software/targets/: STM32F4.cfg
stepper_driver_PCB/: .gitignore  fp-info-cache  stepper_driver_PCB.kicad_pcb  stepper_driver_PCB.kicad_prl  stepper_driver_PCB.kicad_pro  stepper_driver_PCB.kicad_sch  usb.kicad_sch
stepper_driver_PCB/gerber_to_order/stepper_driver_PCB_42.3x42.3mm_for_Default/: stepper_driver_PCB-B_Cu.gbr  stepper_driver_PCB-F_Cu.gbr  stepper_driver_PCB-F_Silks.gbr  stepper_driver_PCB-NPTH.drl
stepper_driver_PCB/gerber_to_order/stepper_driver_PCB_42.3x42.3mm_for_Elecrow/: stepper_driver_PCB-PTH.TXT  stepper_driver_PCB.G1  stepper_driver_PCB.G2  stepper_driver_PCB.GML  stepper_driver_PCB.GTS
stepper_driver_PCB/gerber_to_order/stepper_driver_PCB_42.3x42.3mm_for_FusionPCB/: stepper_driver_PCB.GTO  stepper_driver_PCB.GTS  stepper_driver_PCB.TXT
stepper_driver_PCB/gerber_to_order/stepper_driver_PCB_42.3x42.3mm_for_JLCPCB/: stepper_driver_PCB-NPTH.TXT  stepper_driver_PCB-PTH.TXT  stepper_driver_PCB.GBL  stepper_driver_PCB.GBO  stepper_driver_PCB.GBS  stepper_driver_PCB.GKO  stepper_driver_PCB.GL2  stepper_driver_PCB.GL3  stepper_driver_PCB.GTL  stepper_driver_PCB.GTO  stepper_driver_PCB.GTS
stepper_driver_PCB/gerber_to_order/stepper_driver_PCB_42.3x42.3mm_for_PCBWay/: stepper_driver_PCB-In2_Cu.gbr  stepper_driver_PCB-NPTH.TXT  stepper_driver_PCB-PTH.TXT  stepper_driver_PCB.GBO  stepper_driver_PCB.GBS  stepper_driver_PCB.GML
